Angular client successfully grabs movies from db and renders movie list

--- a/angular-client/src/templates/app.html
+++ b/angular-client/src/templates/app.html
@@ -4,4 +4,5 @@
     <button ng-click="appCtrl.getAllMovies()">Movies</button>
     <button>Add Movie</button>
   </nav>
+  <movie-list movies="appCtrl.movies"></movie-list>
 </div>
