Refactor db to use Sequelize instead of mongoose; Working on angular movie form

--- a/angular-client/src/templates/app.html
+++ b/angular-client/src/templates/app.html
@@ -2,7 +2,8 @@
   <h1>{{appCtrl.appTitle}}</h1>
   <nav>
     <button ng-click="appCtrl.getAllMovies()">Movies</button>
-    <button>Add Movie</button>
+    <button ng-click="appCtrl.displayAddMovieForm()">Add Movie</button>
   </nav>
-  <movie-list movies="appCtrl.movies"></movie-list>
+  <movie-list movies="appCtrl.movies" ng-if="appCtrl.fetchedMovies"></movie-list>
+  <add-movie-form ng-if="appCtrl.displayForm"></add-movie-form>
 </div>
