--- a/angular-client/src/templates/addMovieForm.html
+++ b/angular-client/src/templates/addMovieForm.html
@@ -3,6 +3,6 @@
     <label>Title: <input type="text" ng-model="addMovieCtrl.movie.title"/></label>
     <label>Number of Copies: <input type="text" ng-model="addMovieCtrl.movie.numberOfCopies"/></label>
     <label>IMDB Rating: <input type="text" ng-model="addMovieCtrl.movie.IMDBrating"/></label>
-    <input type="submit" ng-click="addMovieCtrl.submitForm(movie)" value="Submit">
+    <input type="submit" ng-click="addMovieCtrl.submitForm(addMovieCtrl.movie)" value="Submit">
   </form>
 </div>
